--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.8.2",
+    "sqlite3": "^5.1.7",
     "zod": "^3.25.30"
+  },
+  "devDependencies": {
+    "prisma": "^6.8.2"
   }
 }
